seckill-helm/templates/service-gray.yaml
apiVersion: v1
kind: Service
metadata:
  name: seckill-service-gray
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: seckill-service-gray
