seckill-helm/templates/ingress-gray.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: seckill-ingress-gray
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "20" # 20%流量到灰度
spec:
  rules:
    - host: seckill.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: seckill-service-gray
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: seckill-ingress-prod
spec:
  rules:
    - host: seckill.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: seckill-service
                port:
                  number: 80
